# aimfp

./: .gitignore  .watchdogignore  README.md  manifest.json  pyproject.toml
.claude-plugin/: plugin.json
aimfp-plugin/: .mcp.json
dev/: bump-version.py
dev/directives-json/: directives-git.json  directives-project.json
dev/helpers-json/: helpers-changeset.json  helpers-orchestrators.json  helpers-project-9.json
dev/logs/: sync_report.json
documentation/: settings.local.json
src/aimfp/: __init__.py
src/aimfp/database/: aimfp_core.db  connection.py
src/aimfp/database/initialization/: standard_infrastructure.sql
src/aimfp/database/schemas/: aimfp_core.sql  project.sql
src/aimfp/helpers/changeset/: __init__.py  _common.py  apply.py  backfill.py  conflicts.py  export.py  history.py  merge.py  partition.py  preflight.py  summarize.py
src/aimfp/helpers/orchestrators/: entry_points.py  status.py
src/aimfp/helpers/project/: functions_1.py  items_notes.py  metadata.py  state_db.py  subtasks_sidequests.py  tasks.py  types_1.py
src/aimfp/helpers/shared/: slugs.py  supportive_context.py
src/aimfp/mcp_server/: registry.py  server.py
src/aimfp/reference/directives/: aimfp_init.md  git_detect_conflicts.md  git_merge_branch.md  project_catalog.md  project_discovery.md
src/aimfp/watchdog/: __main__.py  analyzers.py  config.py  reconciliation.py  watcher.py
tests/: test_changeset.py  test_changeset_orchestrator.py  test_worktree_isolation.py
